tests/parser/syntax-errors/token-not-found/expected_identifier_after_global.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    global 3


# CHECK:      SyntaxError (line 4, column 12): token of kind TokenKind.IDENTIFIER not found.
# CHECK-NEXT: >>>    global 3
# CHECK-NEXT: >>>-----------^
